# Stepik-1280

./: .gitignore  README.md  imageProcessing.py  lesson-2-1-4.py  lesson-2-1-5.py  lesson-2-1-6.ipynb  lesson-2-1-7.ipynb  lesson-2-1-7.py  lesson-2-1-8.py  lesson-2-1.ipynb  lesson-2-2-1.ipynb  lesson-2-2-2.py  lesson-2-2-4.py  lesson-2-2-5.ipynb  lesson-2-2-6.py  lesson-2-3-1.ipynb  lesson-2-3-2.ipynb  lesson-2-3-2.py  lesson-3-1-3.ipynb  lesson-3-1-3.py  pyproject.toml
