[tool.poetry]
name = "stepik-1280"
version = "0.1.0"
description = ""
authors = ["afaist <afaist@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12"
numpy = "^1.26.2"
matplotlib = "^3.8.2"
scikit-image = "^0.22.0"
jupyter = "^1.0.0"

[tool.poetry.dev-dependencies]
autopep8 = "^1.04"
yapf = "^0.40.2"
pyppeteer = "^1.0.2"
pytest = "^7.4.3"
pylint = "^3.0.2"
flake8 = "^6.1.0"
black = "^23.11.0"
nb-clean = "^3.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
